update with test junit test